// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmallAppItem component should render correctly an app 1`] = `
<button
  className="SmallAppItem__SmallAppItem___1Ple5"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="SmallAppItem__SmallAppItem-icon-wrapper___rQAvt"
  >
    <withClient(AppIcon)
      app={
        Object {
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "cozy",
          "icon": "<svg></svg>",
          "name": "Test",
          "namePrefix": "Cozy",
          "onClick": [MockFunction],
          "slug": "test",
          "version": "3.0.3",
        }
      }
      className="SmallAppItem__SmallAppItem-icon___2Kl7e"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="SmallAppItem__SmallAppItem-desc___W6Z-T"
  >
    <h4
      className="SmallAppItem__SmallAppItem-title___2LOc3"
    >
      Cozy Test
    </h4>
    <p
      className="SmallAppItem__SmallAppItem-developer___3cc7M"
    >
      By Cozy
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an app in maintenance 1`] = `
<button
  className="SmallAppItem__SmallAppItem___1Ple5"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="SmallAppItem__SmallAppItem-icon-wrapper___rQAvt"
  >
    <withClient(AppIcon)
      app={
        Object {
          "developer": Object {
            "name": "Naming me",
          },
          "editor": "",
          "icon": "<svg></svg>",
          "installed": true,
          "installedAppLink": "test2.cozy.mock",
          "maintenance": Object {
            "maintenance_options": Object {},
          },
          "name": "Test2",
          "onClick": [MockFunction],
          "slug": "test2",
          "version": "3.0.3-beta7483",
        }
      }
      className="SmallAppItem__SmallAppItem-icon___2Kl7e"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="SmallAppItem__SmallAppItem-desc___W6Z-T"
  >
    <h4
      className="SmallAppItem__SmallAppItem-title___2LOc3"
    >
      Test2
    </h4>
    <p
      className="SmallAppItem__SmallAppItem-developer___3cc7M"
    >
      By Naming me
    </p>
    <p
      className="SmallAppItem__SmallAppItem-status___DCA3u"
    >
      In maintenance
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an app with iconToLoad (icon being fetching) 1`] = `
<button
  className="SmallAppItem__SmallAppItem___1Ple5"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="SmallAppItem__SmallAppItem-icon-wrapper___rQAvt"
  >
    <withClient(AppIcon)
      app={
        Object {
          "developer": Object {
            "name": "Naming me",
          },
          "editor": "",
          "icon": "<svg></svg>",
          "iconToLoad": true,
          "installed": true,
          "installedAppLink": "test2.cozy.mock",
          "name": "Test2",
          "onClick": [MockFunction],
          "slug": "test2",
          "version": "3.0.3-beta7483",
        }
      }
      className="SmallAppItem__SmallAppItem-icon___2Kl7e"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="SmallAppItem__SmallAppItem-desc___W6Z-T"
  >
    <h4
      className="SmallAppItem__SmallAppItem-title___2LOc3"
    >
      Test2
    </h4>
    <p
      className="SmallAppItem__SmallAppItem-developer___3cc7M"
    >
      By Naming me
    </p>
    <p
      className="SmallAppItem__SmallAppItem-status___DCA3u"
    >
      Installed
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an app with iconToLoad if isMobile 1`] = `
<button
  className="SmallAppItem__SmallAppItem___1Ple5"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="SmallAppItem__SmallAppItem-icon-wrapper___rQAvt"
  >
    <withClient(AppIcon)
      app={
        Object {
          "developer": Object {
            "name": "Naming me",
          },
          "editor": "",
          "icon": "<svg></svg>",
          "iconToLoad": true,
          "installed": true,
          "installedAppLink": "test2.cozy.mock",
          "name": "Test2",
          "onClick": [MockFunction],
          "slug": "test2",
          "version": "3.0.3-beta7483",
        }
      }
      className="SmallAppItem__SmallAppItem-icon___2Kl7e"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="SmallAppItem__SmallAppItem-desc___W6Z-T"
  >
    <h4
      className="SmallAppItem__SmallAppItem-title___2LOc3"
    >
      Test2
    </h4>
    <p
      className="SmallAppItem__SmallAppItem-developer___3cc7M"
    >
      By Naming me
    </p>
    <p
      className="SmallAppItem__SmallAppItem-status___DCA3u"
    >
      Installed
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an app without developer property 1`] = `
<button
  className="SmallAppItem__SmallAppItem___1Ple5"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="SmallAppItem__SmallAppItem-icon-wrapper___rQAvt"
  >
    <withClient(AppIcon)
      app={
        Object {
          "editor": "cozy",
          "icon": "<svg></svg>",
          "name": "Test",
          "namePrefix": "Cozy",
          "onClick": [MockFunction],
          "slug": "test",
          "version": "3.0.3",
        }
      }
      className="SmallAppItem__SmallAppItem-icon___2Kl7e"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="SmallAppItem__SmallAppItem-desc___W6Z-T"
  >
    <h4
      className="SmallAppItem__SmallAppItem-title___2LOc3"
    >
      Cozy Test
    </h4>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an installed app 1`] = `
<button
  className="SmallAppItem__SmallAppItem___1Ple5"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="SmallAppItem__SmallAppItem-icon-wrapper___rQAvt"
  >
    <withClient(AppIcon)
      app={
        Object {
          "developer": Object {
            "name": "Naming me",
          },
          "editor": "",
          "icon": "<svg></svg>",
          "installed": true,
          "installedAppLink": "test2.cozy.mock",
          "name": "Test2",
          "onClick": [MockFunction],
          "slug": "test2",
          "version": "3.0.3-beta7483",
        }
      }
      className="SmallAppItem__SmallAppItem-icon___2Kl7e"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="SmallAppItem__SmallAppItem-desc___W6Z-T"
  >
    <h4
      className="SmallAppItem__SmallAppItem-title___2LOc3"
    >
      Test2
    </h4>
    <p
      className="SmallAppItem__SmallAppItem-developer___3cc7M"
    >
      By Naming me
    </p>
    <p
      className="SmallAppItem__SmallAppItem-status___DCA3u"
    >
      Installed
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an installed app without icon provided 1`] = `
<button
  className="SmallAppItem__SmallAppItem___1Ple5"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="SmallAppItem__SmallAppItem-icon-wrapper___rQAvt"
  >
    <withClient(AppIcon)
      app={
        Object {
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "cozy",
          "icon": "",
          "name": "Test",
          "namePrefix": "Cozy",
          "onClick": [MockFunction],
          "slug": "test",
          "version": "3.0.3",
        }
      }
      className="SmallAppItem__SmallAppItem-icon___2Kl7e"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="SmallAppItem__SmallAppItem-desc___W6Z-T"
  >
    <h4
      className="SmallAppItem__SmallAppItem-title___2LOc3"
    >
      Cozy Test
    </h4>
    <p
      className="SmallAppItem__SmallAppItem-developer___3cc7M"
    >
      By Cozy
    </p>
  </div>
</button>
`;
